--- a/sass/components/_form.scss
+++ b/sass/components/_form.scss
@@ -153,6 +153,7 @@ textarea.materialize-textarea {
   overflow-y: hidden; /* prevents scroll bar flash */
   padding: 1.6rem 0; /* prevents text jump on Enter keypress */
   resize: none;
+  min-height: 3rem;
 }
 
 // For textarea autoresize
